have to use separate OpenSSL build for ZNC debug builds or CRTs will clash

--- a/win32/dependencies/README
+++ b/win32/dependencies/README
@@ -4,4 +4,8 @@ compile per instructions in INSTALL.W32/INSTALL.W64
 2) copy inc32/openssl to include/openssl
 
 3) copy out32dll/libeay.* and out32dll/ssleay.* to
-the correct lib_xx folder.
+the correct lib_xxx_release folder.
+
+4) repeat for debug builds. do not copy release builds,
+OpenSSL_APPLINK stuff will fail otherwise due to non-
+matching C runtime libraries.
